--- a/resources/Code/Seminar.yml
+++ b/resources/Code/Seminar.yml
@@ -72,4 +72,5 @@ dependencies:
   - zstd=1.5.6=h915ae27_0
   - pip:
       - numpy==2.0.2
+# it differs in other computer, but it seems like conda don't use this prefix
 prefix: /usr/local/Caskroom/miniconda/base/envs/Seminar
